[metadata]
name = dl.py
version = 0.0.1
url = https://github.com/laddge/dl.py
author = Laddge
author_email = dev.laddge@gmail.com
license_file = LICENSE
description = download script written in Python3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
install_requires =

[options.entry_points]
console_scripts =
  dl.py = dlpy:main
